--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,7 @@ title: "[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis"
 author: "Iván Díaz, Nima Hejazi, Kara Rudolph"
 date: "updated: `r format(Sys.time(), '%B %d, %Y')`"
 documentclass: book
+output: bookdown::gitbook
 site: bookdown::bookdown_site
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
