--- a/book.bib
+++ b/book.bib
@@ -9,6 +9,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{rudolph2019causal,
+  title={Causal mediation analysis with observational data: considerations and illustration examining mechanisms linking neighborhood poverty to adolescent substance use},
+  author={Rudolph, Kara E and Goin, Dana E and Paksarian, Diana and Crowder, Rebecca and Merikangas, Kathleen R and Stuart, Elizabeth A},
+  journal={American journal of epidemiology},
+  volume={188},
+  number={3},
+  pages={598--608},
+  year={2019},
+  publisher={Oxford University Press}
+}
+
 @book{xie2015,
   title = {Dynamic Documents with {R} and knitr},
   author = {Yihui Xie},
