--- a/01-preface.Rmd
+++ b/01-preface.Rmd
@@ -2,27 +2,48 @@
 
 ## Motivating study
 
-Do differences in the effects of treatment (comparing two medications for opioid
-use disorder, naltrexone vs buprenorphine) on risk of relapse operate through
-mediators of adherence, opioid use, pain, and depressive symptoms?
-[@rudolph2020explaining]
+- A recent, large, multi-site trial (X:BOT) compared the effectiveness
+of XR-NTX to buprenorphine–naloxone (BUP-NX) in preventing relapse
+among those with OUD starting medication in inpatient treatment
+settings.
+
+- An analysis of potential moderators of medication effectiveness
+found that homeless individuals had a lower risk of relapse on XRNTX,
+whereas non-homeless individuals had a lower risk of relapse on
+BUP-NX.
+
+- The effect sizes were similarly large for these groups but in
+opposite directions.
+
+- The underlying mechanisms for these differences have not yet been
+explored. We can to identify these mechanisms by using mediation
+analysis.
+
+- Key questions:
+  - Do differences in the effects of treatment (comparing two medications for opioid
+  use disorder, naltrexone vs buprenorphine) on risk of relapse operate through
+  mediators of adherence, opioid use, pain, and depressive symptoms? 
+  [@rudolph2020explaining]
+  - Are those mediated effects different for homeless vs non-homeless individuals?
+  
 <!--
 ID: Need to fix format of the following figure
 -->
 
-```{r, echo = FALSE, fig.cap="", out.width = '75%'}
+```{r, echo = FALSE, fig.cap="", out.width = '100%'}
 knitr::include_graphics(here::here("img", "ctndag.png"))
 ```
 
 ## What is causal mediation analysis?
 
-- Causal mediation analyses assess how the paths behave under interventions
 - Statistical mediation analyses assess associations between the variables
+- Causal mediation analyses assess how the paths behave under circumstances different from the observed circumstances (e.g., interventions)
+
 <!--- Causal mediation analysis is thus useful to understand mechanisms-->
 
 ### Why are the methods that we will discuss today important?
 
-- Assume you are interested in the effect of a treatment assignment $A$
+- Assume you are interested in the effect of treatment assignment $A$
   (naltrexone vs.  buprenorphine) on an outcome $Y$ (risk of relapse) through
   mediators $M$ (opioid use, pain, depressive symptoms)
 - We have pre-treatment confounders $W$
@@ -218,7 +239,7 @@ The above graphs can be interpreted as a _non-parametric structural equation mod
 - Here $U=(U_W, U_A, U_Z, U_M, U_Y)$ is a vector of all unmeasured exogenous
   factors affecting the system
 - The functions $f$ are assumed fixed but unknown
-- We posit this model as a system of equations that nature uses to geenrate the
+- We posit this model as a system of equations that nature uses to generate the
   data
 - Therefore we leave the functions $f$ unspecified (i.e., we do not know the
   true nature mechanisms)
@@ -227,13 +248,17 @@ The above graphs can be interpreted as a _non-parametric structural equation mod
 
 ## Counterfactuals
 
-- We define all the effects of interest using _counterfactuals_
+- Recall that we are interested in assessing how the pathways would behave under circumstances different from the observed circumstances
+- We operationalize this idea using _counterfactual_ variables
 - Counterfactuals are hypothetical random variables that would have been
   observed in an alternative world where something had happened, possibly
   contrary to fact <!--we would be able to perform interventions on the
   random variables of interest-->
+
+### We will constantly use the following counterfactual variables: {-}
+
 - $Y_a$ is a counterfactual variable in a hypothetical world where $\P(A=a)=1$
-  with probability one
+  with probability one for some valure $a$
 - $Y_{a,m}$ is the counterfactual outcome in a world where $\P(A=a,M=m)=1$
 - $M_a$ is the counterfactual variable representing the mediator in a world
   where $\P(A=a)=1$.
@@ -243,21 +268,34 @@ The above graphs can be interpreted as a _non-parametric structural equation mod
 <!-- - You can use counterfactual variables as _primitives_ -->
 - In the NPSEM framework, counterfactuals are quantities _derived_ from the
   model.
+- Once you define a change to the causal system, that change needs to be progragated downstream.
+  - Example: modifying the system to make everyone receive XR-NTX yields counterfactual adherence, mediators, and outcomes.
 - Take as example the DAG in Figure 1.2:
   \begin{align}
+    A    &= a\\
+    Z_a  &= f_Z(W, a, U_M)\\
+    M_a  &= f_M(W, a, Z_a, U_M)\\	
     Y_a  &= f_Y(W, a, Z_a, M_a, U_Y)\\
+\end{align}
+- We will also be interested in _joint changes to the system:
+  \begin{align}
+    A    &= a\\
+    Z_a  &= f_Z(W, a, U_M)\\
+    M  &= m\\	
     Y_{a,m}  &= f_Y(W, a, Z_a, m, U_Y)\\
-    M_a  &= f_M(W, a, Z_a, U_M)
-  \end{align}
-- You can also define _nested counterfactuals_
+\end{align}
+- And, perhaps more importantly, we will use _nested counterfactuals_
 - For example, if $A$ is binary, you can think of the following counterfactual
-  \begin{equation*}
-    Y_{1, M_0} = f_Y(W, 1, Z_1, M_0, U_Y)
-  \end{equation*}
-- Interpreted as _the outcome for an individual in a hypothetical world where
+  \begin{align}
+    A    &= 1\\
+    Z_1  &= f_Z(W, 1, U_M)\\
+    M  &= M_0\\	
+    Y_{1, M_0} &= f_Y(W, 1, Z_1, M_0, U_Y)\\
+\end{align}
+- $Y_{1, M_0}$ is interpreted as _the outcome for an individual in a hypothetical world where
   treatment was given but the mediator was held at the value it would have
   taken under no treatment_
-- Causal effects are defined in terms of the distribution of these
-  counterfactuals.
+- Causal mediation effects are often defined in terms of the distribution of these
+  nested counterfactuals.
 - That is, causal effects give you information about what would have happened
-  _in some hypothetical world_.
+  _in some hypothetical world_ where the mediator and treatment mechanisms changed.
