--- a/book.bib
+++ b/book.bib
@@ -10,8 +10,11 @@
 }
 
 @article{rudolph2019causal,
-  title={Causal mediation analysis with observational data: considerations and illustration examining mechanisms linking neighborhood poverty to adolescent substance use},
-  author={Rudolph, Kara E and Goin, Dana E and Paksarian, Diana and Crowder, Rebecca and Merikangas, Kathleen R and Stuart, Elizabeth A},
+  title={Causal mediation analysis with observational data: considerations and
+         illustration examining mechanisms linking neighborhood poverty to
+         adolescent substance use}, author={Rudolph, Kara E and Goin, Dana E
+         and Paksarian, Diana and Crowder, Rebecca and Merikangas, Kathleen R
+         and Stuart, Elizabeth A},
   journal={American journal of epidemiology},
   volume={188},
   number={3},
