--- a/04-how-to-choose.Rmd
+++ b/04-how-to-choose.Rmd
@@ -1,13 +1,14 @@
 # How to choose an estimand: Real-world example {#estimandirl}
 
-## Comparative effectivness of two medications for opioid use disorder (OUD) [@rudolph2020explaining]
+## Comparative effectivness of two medications for opioid use disorder (OUD)
 
 ```{r pressure, echo=FALSE, fig.cap="", fig.ext=if (knitr:::is_latex_output()) "pdf" else "png", out.width = "100%", results="asis"}
 knitr::include_graphics(here::here("img", "ctndag.png"))
 ```
 
 _Motivation_: Opposite overall treatment effects for homeless versus
-nonhomeless participants.
+nonhomeless participants. This application was explored in detail by
+@rudolph2020explaining.
 
 ```{r , echo=FALSE, fig.cap="", fig.ext=if (knitr:::is_latex_output()) "pdf" else "png", out.width = "75%", results="asis"}
 knitr::include_graphics(here::here("img", "tmleesttotal.png"))
