--- a/book.bib
+++ b/book.bib
@@ -11,10 +11,10 @@
 
 @article{rudolph2019causal,
   title={Causal mediation analysis with observational data: considerations and
-         illustration examining mechanisms linking neighborhood poverty to
-         adolescent substance use}, author={Rudolph, Kara E and Goin, Dana E
-         and Paksarian, Diana and Crowder, Rebecca and Merikangas, Kathleen R
-         and Stuart, Elizabeth A},
+    illustration examining mechanisms linking neighborhood poverty to
+    adolescent substance use},
+  author={Rudolph, Kara E and Goin, Dana E and Paksarian, Diana and Crowder,
+    Rebecca and Merikangas, Kathleen R and Stuart, Elizabeth A},
   journal={American journal of epidemiology},
   volume={188},
   number={3},
@@ -538,41 +538,41 @@
 }
 
 @article{neyman1990,
- ISSN = {08834237},
- URL = {http://www.jstor.org/stable/2245382},
- journal = {Statistical Science},
- number = {4},
- pages = {465--472},
- publisher = {Institute of Mathematical Statistics},
- title = {On the Application of Probability Theory to Agricultural Experiments.
-   Essay on Principles. Section 9.},
- volume = {5},
- year = {1990}
+  ISSN = {08834237},
+  URL = {http://www.jstor.org/stable/2245382},
+  journal = {Statistical Science},
+  number = {4},
+  pages = {465--472},
+  publisher = {Institute of Mathematical Statistics},
+  title = {On the Application of Probability Theory to Agricultural
+    Experiments. Essay on Principles. Section 9.},
+  volume = {5},
+  year = {1990}
 }
 
 @article{robins1986,
-title = "A new approach to causal inference in mortality studies with a
-  sustained exposure period—application to control of the healthy worker
-  survivor effect",
-journal = "Mathematical Modelling",
-volume = "7",
-number = "9",
-pages = "1393 - 1512",
-year = "1986",
-issn = "0270-0255",
-doi = "https://doi.org/10.1016/0270-0255(86)90088-6",
-url = "http://www.sciencedirect.com/science/article/pii/0270025586900886",
-author = "James Robins"
+  title = "A new approach to causal inference in mortality studies with a
+    sustained exposure period—application to control of the healthy worker
+    survivor effect",
+  journal = "Mathematical Modelling",
+  volume = "7",
+  number = "9",
+  pages = "1393 - 1512",
+  year = "1986",
+  issn = "0270-0255",
+  doi = "https://doi.org/10.1016/0270-0255(86)90088-6",
+  url = "http://www.sciencedirect.com/science/article/pii/0270025586900886",
+  author = "James Robins"
 }
 
 @book{pearl2009,
- author = {Pearl, Judea},
- title = {Causality: Models, Reasoning and Inference},
- year = {2009},
- isbn = {052189560X, 9780521895606},
- edition = {2nd},
- publisher = {Cambridge University Press},
- address = {New York, NY, USA},
+  author = {Pearl, Judea},
+  title = {Causality: Models, Reasoning and Inference},
+  year = {2009},
+  isbn = {052189560X, 9780521895606},
+  edition = {2nd},
+  publisher = {Cambridge University Press},
+  address = {New York, NY, USA},
 }
 
 @book{moodie2013,
@@ -586,51 +586,51 @@ author = "James Robins"
 }
 
 @article{laber2012,
-author = {Zhang, Baqun and A Tsiatis, Anastasios and Davidian, Marie and
-  Zhang, Min and Laber, Eric},
-title = {Estimating optimal treatment regimes from a classification
-  perspective},
-journal = {Stat},
-volume = {5},
-number = {1},
-pages = {278-278},
-doi = {10.1002/sta4.124},
-url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sta4.124},
-eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/sta4.124},
-year = {2016}
+  author = {Zhang, Baqun and A Tsiatis, Anastasios and Davidian, Marie and
+    Zhang, Min and Laber, Eric},
+  title = {Estimating optimal treatment regimes from a classification
+    perspective},
+  journal = {Stat},
+  volume = {5},
+  number = {1},
+  pages = {278-278},
+  doi = {10.1002/sta4.124},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sta4.124},
+  eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/sta4.124},
+  year = {2016}
 }
 
 @article{kosorok2012,
-author = {Yingqi Zhao and Donglin Zeng and A John Rush and Michael R
-  Kosorok},
-title = {Estimating Individualized Treatment Rules Using Outcome Weighted
-  Learning},
-journal = {Journal of the American Statistical Association},
-volume = {107},
-number = {499},
-pages = {1106-1118},
-year  = {2012},
-publisher = {Taylor & Francis},
-doi = {10.1080/01621459.2012.695674},
-note ={PMID: 23630406},
-URL = {https://doi.org/10.1080/01621459.2012.695674},
-eprint = {https://doi.org/10.1080/01621459.2012.695674}
+  author = {Yingqi Zhao and Donglin Zeng and A John Rush and Michael R
+    Kosorok},
+  title = {Estimating Individualized Treatment Rules Using Outcome Weighted
+    Learning},
+  journal = {Journal of the American Statistical Association},
+  volume = {107},
+  number = {499},
+  pages = {1106-1118},
+  year  = {2012},
+  publisher = {Taylor & Francis},
+  doi = {10.1080/01621459.2012.695674},
+  note ={PMID: 23630406},
+  URL = {https://doi.org/10.1080/01621459.2012.695674},
+  eprint = {https://doi.org/10.1080/01621459.2012.695674}
 }
 
 @article{robins2014,
-author = "Robins, James and Rotnitzky, Andrea",
-doi = "10.1214/14-EJS908",
-fjournal = "Electronic Journal of Statistics",
-journal = "Electron. J. Statist.",
-number = "1",
-pages = "1273--1289",
-publisher = "The Institute of Mathematical Statistics and the Bernoulli
-  Society",
-title = "Discussion of “Dynamic treatment regimes: Technical challenges and
-  applications”",
-url = "https://doi.org/10.1214/14-EJS908",
-volume = "8",
-year = "2014"
+  author = "Robins, James and Rotnitzky, Andrea",
+  doi = "10.1214/14-EJS908",
+  fjournal = "Electronic Journal of Statistics",
+  journal = "Electron. J. Statist.",
+  number = "1",
+  pages = "1273--1289",
+  publisher = "The Institute of Mathematical Statistics and the Bernoulli
+    Society",
+  title = "Discussion of “Dynamic treatment regimes: Technical challenges and
+    applications”",
+  url = "https://doi.org/10.1214/14-EJS908",
+  volume = "8",
+  year = "2014"
 }
 
 @article{breiman1996stacked,
@@ -804,8 +804,10 @@ year = "2014"
   url = {https://doi.org/10.21105/joss.00512}
 }
 @article{hejazi2020nonparametric,
-  title={Nonparametric causal mediation analysis for stochastic interventional (in) direct effects},
-  author={Hejazi, Nima S and Rudolph, Kara E and van der Laan, Mark J and D{\'\i}az, Iv{\'a}n},
+  title={Nonparametric causal mediation analysis for stochastic interventional
+    (in) direct effects},
+  author={Hejazi, Nima S and Rudolph, Kara E and van der Laan, Mark J and
+    D{\'\i}az, Iv{\'a}n},
   journal={arXiv preprint arXiv:2009.06203},
   year={2020}
 }
@@ -969,4 +971,3 @@ year = "2014"
   doi = {10.1111/ectj.12097},
   url = {https://doi.org/10.1111/ectj.12097}
 }
-
